Remove the pretty useless scDateTime library.

--- a/web/templates/filters/date-time-range-input.html
+++ b/web/templates/filters/date-time-range-input.html
@@ -13,5 +13,6 @@
         data-collection="vm.ranges"
         data-ng-model="vm.dateRangePreSelect"
         data-action="filters/date/ranges"
+        data-label="{{ ::'DATE_RANGE_PRESELECT' | translate }}"
     ></generic-filter>
 </div>
