--- a/web/templates/filters/generic-filter.html
+++ b/web/templates/filters/generic-filter.html
@@ -1,17 +1,16 @@
-<md-content layout="row" layout-align="start center" flex>
-    <md-input-container flex>
-        <label>{{ vm.label }}</label>
-        <md-select
-                id="{{ vm.id }}"
-                data-ng-model="vm.ngModel"
-                aria-label="{{ vm.label }}"
-                required="{{ vm.require }}"
+<md-input-container flex>
+    <label>{{ vm.label }}</label>
+    <md-select
+            id="{{ vm.id }}"
+            data-ng-model="vm.ngModel"
+            class="{{ vm.class }}"
+            aria-label="{{ vm.label }}"
+            required="{{ vm.require }}"
+    >
+        <md-option data-ng-value="option.id" data-ng-selected="vm.require ? $first : 0"
+                   data-ng-repeat="option in vm.options track by option.id"
         >
-            <md-option data-ng-value="option.id" data-ng-selected="vm.require ? $first : 0"
-                       data-ng-repeat="option in vm.options track by option.id"
-            >
-                {{ option.name | translate }}
-            </md-option>
-        </md-select>
-    </md-input-container>
-</md-content>
+            {{ option.name | translate }}
+        </md-option>
+    </md-select>
+</md-input-container>
