Implement api key fetching to the settings UI.

--- a/web/templates/settings/partials/app-settings.html
+++ b/web/templates/settings/partials/app-settings.html
@@ -13,7 +13,10 @@
             </md-switch>
 
             <md-card-actions layout="row" layout-align="end center">
-                <md-button id="btn_app_settings_save" data-ng-disabled="vm.loading" type="submit">
+                <md-button id="btn_app_settings_save"
+                           class="md-primary md-raised"
+                           data-ng-disabled="vm.loading"
+                           type="submit">
                     {{ ::'SAVE' | translate }}
                 </md-button>
             </md-card-actions>
