--- a/web/templates/settings/partials/danger-zone.html
+++ b/web/templates/settings/partials/danger-zone.html
@@ -1,10 +1,37 @@
 <md-card>
+    <md-progress-linear
+            md-mode="determinate"
+            value="{{ vm.time }}"
+            data-ng-show="vm.time > 0"
+    ></md-progress-linear>
+
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">{{ ::'DANGER_ZONE' | translate }}</span>
+            <span class="md-headline" layout="row" layout-align="start center" flex>
+                {{ ::'DANGER_ZONE' | translate }}
+                <span flex></span>
+                <md-switch data-ng-model="vm.enabled"></md-switch>
+            </span>
         </md-card-title-text>
     </md-card-title>
-    <form data-ng-submit="vm.save()">
+
+    <div layout-padding>
+        <md-input-container>
+            <md-button class="md-warn md-raised"
+                       data-ng-disabled="!vm.enabled"
+                       data-ng-click="vm.getApiToken()"
+            >
+                {{ ::'GET_API_TOKEN' | translate }}
+            </md-button>
+        </md-input-container>
+
+
+        <md-input-container flex>
+            <span>{{ vm.apiToken }}</span>
+        </md-input-container>
+    </div>
+
+    <form data-ng-submit="vm.save()" data-ng-disabled="!vm.enabled">
         <md-card-content>
             <span>{{ 'CHANGE_PASSWORD' | translate }}</span>
             <md-input-container class="md-block" flex>
@@ -32,7 +59,10 @@
             </md-input-container>
 
             <md-card-actions layout="row" layout-align="end center">
-                <md-button id="btn_danger_zone_save" data-ng-disabled="vm.loading" type="submit">
+                <md-button id="btn_danger_zone_save" class="md-primary md-raised"
+                           data-ng-disabled="vm.loading || !vm.enabled"
+                           type="submit"
+                >
                     {{ ::'SAVE' | translate }}
                 </md-button>
             </md-card-actions>
