--- a/web/css/style.css
+++ b/web/css/style.css
@@ -36,6 +36,10 @@
     left: 0;
 }
 
+.relative {
+    position: relative;
+}
+
 .layout-fill-x {
     min-width: 100% !important;
 }
@@ -120,4 +124,33 @@ md-input-container.no-whitespace input {
     float: left;
     position: relative;
     bottom: 0;
+}
+
+#main_loader {
+    opacity: 1;
+    transition: 0.2s;
+}
+
+#main_loader.ng-hide {
+    opacity: 0;
+}
+
+#login_container {
+    background: url('./img/bg.jpg');
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.2s;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
 }
