--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -13,6 +13,16 @@
             <md-icon>timeline</md-icon>
             <span>{{ ::'GRAPH' | translate }}</span>
         </md-sidemenu-button>
+
+        <md-sidemenu-content
+                md-icon="mouse"
+                md-heading="{{ ::'INSPECTOR' | translate }}"
+                md-arrow="true"
+        >
+            <md-sidemenu-button href="#/inspector/apps">
+                <span>{{ ::'INSPECTOR_APPLICATION_REPORT' | translate }}</span>
+            </md-sidemenu-button>
+        </md-sidemenu-content>
     </md-sidemenu-group>
 
     <md-sidemenu-group>
