Implement active application interface.

--- a/web/templates/filters/date-time-range-input.html
+++ b/web/templates/filters/date-time-range-input.html
@@ -1,4 +1,4 @@
-<div layout="row">
+<div layout="row" layout-xs="column">
     <date-time-input
         data-label="{{ ::'START_DATE' | translate }}"
         data-ng-model="vm.startDateTime"
