--- a/web/templates/graph/index.html
+++ b/web/templates/graph/index.html
@@ -62,9 +62,9 @@
                 data-end-date-time="vm.graph.endDateTime"
                 data-date-range-pre-select="vm.graph.dateRangePreSelect"
             ></date-time-range-input>
+        </md-content>
 
-            <span flex></span>
-
+        <md-content layout="row" layout-align="end center">
             <md-content layout-align="end center">
                 <md-button data-ng-click="vm.save()"
                 >
