--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -31,6 +31,16 @@
                     <span>{{ ::'INSPECTOR_APPLICATION_LOAD_PER_TIME' | translate }}</span>
                 </md-sidemenu-button>
             </md-sidemenu-content>
+
+            <md-sidemenu-content
+                    md-heading="{{ ::'INSPECTOR_KEYBOARD' | translate }}"
+                    md-arrow="true"
+            >
+                <md-sidemenu-button href="#/inspector/keyboard/summary">
+                    <span>{{ ::'INSPECTOR_KEYBOARD_SUMMARY' | translate }}</span>
+                </md-sidemenu-button>
+            </md-sidemenu-content>
+
         </md-sidemenu-content>
     </md-sidemenu-group>
 
