--- a/web/templates/inspector/apps/index.html
+++ b/web/templates/inspector/apps/index.html
@@ -1,5 +1,7 @@
 <div layout="column" flex data-ng-controller="InspectorAppsMainController as vm">
 
+    <h1 class="md-headline">{{ ::'TITLE_ACTIVE_APPLICATION_TOTAL_USAGE_REPORT' | translate }}</h1>
+
     <div layout="row" layout-xs="column" layout-align="start center" flex>
         <date-time-range-input
             data-start-date-time="vm.filters.startDate"
