--- a/web/templates/inspector/apps/usage-per-time/index.html
+++ b/web/templates/inspector/apps/usage-per-time/index.html
@@ -3,6 +3,8 @@
 >
     <loader data-ng-if="vm.loading"></loader>
 
+    <h1 class="md-headline">{{ ::'TITLE_USAGE_PER_TIME_REPORT' | translate }}</h1>
+
     <md-content layout="column" layout-align="start">
         <div layout="row" layout-align="start center">
             <generic-filter-multiple
