--- a/web/templates/inspector/keyboard/summary/index.html
+++ b/web/templates/inspector/keyboard/summary/index.html
@@ -3,6 +3,8 @@
 >
     <loader data-ng-if="vm.loading"></loader>
 
+    <h1 class="md-headline">{{ ::'TITLE_KEYBOARD_SUMMARY_REPORT' | translate }}</h1>
+
     <md-content layout="column">
         <div layout="row" flex layout-align="start center">
             <date-time-range-input
