Add bases for the keyboard load chart interface.

--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -39,6 +39,10 @@
                 <md-sidemenu-button href="#/inspector/keyboard/summary">
                     <span>{{ ::'INSPECTOR_KEYBOARD_SUMMARY' | translate }}</span>
                 </md-sidemenu-button>
+
+                <md-sidemenu-button href="#/inspector/keyboard/keyboard-load-chart">
+                    <span>{{ ::'INSPECTOR_KEYBOARD_LOAD_CHART' | translate }}</span>
+                </md-sidemenu-button>
             </md-sidemenu-content>
 
         </md-sidemenu-content>
